Fixed expanded queue being hidden behind the static sidebar

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -183,7 +183,7 @@ gpm-card-grid {
   }
 
   &[data-playmidnight *= "static-sidebar"] #queue-overlay {
-    width: calc(100vw - 296px);
+    width: calc(100vw - 64px - 280px);
   }
 }
 
